# qdrant-ollama-gradio

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  qdrant-ollama-thinking.py  requirements.txt  run.py
rag_chat_app/: __init__.py  app.py
scripts/: ollama-entrypoint.sh  setup-models.sh
