[project]
name = "rag-chat-app"
version = "0.1.0"
description = "RAG Chat Application with Thinking Steps"
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
dependencies = [
    "gradio>=4.0.0",
    "ollama>=0.3.0",
    "langchain-community>=0.2.0",
    "langchain-qdrant>=0.1.0",
    "langchain-ollama>=0.1.0",
    "qdrant-client>=1.9.0",
    "langchain-text-splitters>=0.2.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=4.9.0",
    "sentence-transformers>=2.7.0",
    "requests>=2.31.0",
    "numpy>=1.24.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["rag_chat_app"]

[tool.ruff]
line-length = 88
target-version = "py38"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings  
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"